@@ -1,4 +1,5 @@
 %token EXPR ELSE
+%default-actions quiet
 
 %%
 
