@@ -1,3 +1,4 @@
+%default-actions quiet
 %debug
 
 %union {
