@@ -1,4 +1,5 @@
 %token NR
+%default-actions quiet
 
 %%
 
