@@ -1,3 +1,4 @@
+%default-actions quiet
 %filenames parser
 %scanner ../scanner/scanner.h
 %debug
