@@ -1,4 +1,5 @@
 %token DELIM TEXT
+%default-actions quiet
 
 %%     
 
