@@ -1,4 +1,5 @@
 %filenames parser
+%default-actions quiet
 
 %scanner ../scanner/scanner.h
 
